# rest_in_peace

./: .gitignore  README.md  __main__.py  database.db  database.py  genericapi.py  index.html  main.py  requirements.txt  seed.sql  server.py  setup.cfg  setup.py
src/rest_in_peace/: __init__.py  __main__.py  cli.py  database.py  openapi.py  server.py
tests/: __main__.py  test_database.py  test_server.py
