[metadata]
name = Rest-In-Peace
version = 0.0.1
author = Henrique Gogó
author_email = henriquegogo@gmail.com
description = An instant and schemaless rest api with sqlite
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/henriquegogo/rest_in_peace
project_urls =
  Bug Tracker = https://github.com/henriquegogo/rest_in_peace/issues
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
